--- a/css/cadastrodeproduto.css
+++ b/css/cadastrodeproduto.css
@@ -52,3 +52,28 @@
 #botaoform:hover {
     background-image: linear-gradient(to bottom, rgb(243, 239, 240), var(--color-padrao));
 }
+
+
+/*media queire*/
+@media (max-width: 480px) {
+    body {
+        width: 100%;
+    }
+
+    #titulo{
+        font-size: 35px;
+    }
+
+    .inputform{
+        margin: auto;
+        max-width: 1rem;
+        
+    }
+
+    .campoform{
+        font-size: 20px;
+        margin: auto;
+        margin-top: 1rem;
+    }
+
+}
