--- a/css/produto.css
+++ b/css/produto.css
@@ -22,6 +22,11 @@
     margin:auto;
     margin-right: 2rem;
     font-size: 20px;
+    color: var(--color-padrao);
+}
+
+i.red{
+    color: red;
 }
 
 
